# collection

./: .ansible-lint  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .vale.ini  .yamllint.yml  LICENSE  README.md  galaxy.yml  pyproject.toml  requirements.yml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/config/workflows/: workflow-publish-to-galaxy.json  workflow-push.json
.github/scripts/: job-50-test-precommit.sh  step-setup-environment.sh
.github/workflows/: workflow-asdf-push.yml  workflow-clamav-push.yml  workflow-colima-push.yml  workflow-downloader-push.yml  workflow-firewall-push.yml  workflow-homebrew_retry-push.yml  workflow-homeshick-push.yml  workflow-jumpcloud-push.yml  workflow-publish-to-galaxy.yml  workflow-push.yml  workflow-symlinks-push.yml
.vale/Vocab/collection/: accept.txt
roles/asdf/: README.md
roles/asdf/defaults/: main.yml
roles/asdf/handlers/: main.yml
roles/asdf/meta/: main.yml
roles/asdf/tasks/: install.yml  main.yml
roles/asdf/vars/: main.yml
roles/clamav/: README.md
roles/clamav/defaults/: main.yml
roles/clamav/handlers/: main.yml
roles/clamav/meta/: main.yml
roles/clamav/tasks/: main.yml
roles/clamav/templates/: clamav.clamd.plist.j2  clamav.clamwatch.plist.j2  clamav.freshclam.plist.j2  clamd.conf.j2  clamwatch.sh.j2  freshclam.conf.j2  (+3 more)
roles/colima/: README.md
roles/downloader/: README.md
roles/firewall/: README.md
roles/homebrew_retry/: README.md
roles/homeshick/: README.md
roles/jumpcloud/: README.md
roles/symlinks/: .yamllint.yml  README.md
(+205 files in other folders)
